--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
 }
-
+apply plugin:'kotlin-android-extensions'
 android {
     compileSdkVersion 33
     buildToolsVersion "33.0.1"
